# custom_software_render

./: .gitignore  CMakeLists.txt  b2f_features.hpp  b2f_render.cpp  b2f_render.hpp  geometry.hpp  main.cpp  mesh.hpp  tgaimage.cpp  tgaimage.hpp
